prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/local_slot_create.nut
// EXPECT_ERROR: "can't 'create' a local slot"
local x = 5
x <- 10
